samples/_failures_safe/1761392614_3f6911_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b001f1d5.c: In function ‘main’:
./samples/SAFE/__tmp_b001f1d5.c:163:9: error: expected expression at end of input
  163 |         'T', 'h', 'i', 's', ' ', 'i', 's', ' ',
      |         ^~~
./samples/SAFE/__tmp_b001f1d5.c:163:9: error: expected declaration or statement at end of input
